--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "4       Psoriasis  Psoriasis is a common skin disorder that forms..."
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,49 +362,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    An infectious disease caused by protozoan para...\n",
-       "Name: Description, dtype: object"
+       "Int64Index([2], dtype='int64')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = \"Malaria\"\n",
+    "d = \"Allergy\"\n",
     "df_2[df_2[\"Disease\"] == d][\"Description\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'An adverse drug reaction (ADR) is an injury caused by taking medication. ADRs may occur following a single dose or prolonged administration of a drug or result from the combination of two or more drugs.'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_2[\"Description\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +489,7 @@
        "4                   salt baths  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,6 +500,35 @@
     "print(\"Precaution shape is:\", df_3.shape)\n",
     "\n",
     "df_3.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precautions to take are:\n",
+      "2    apply calamine\n",
+      "Name: Precaution_1, dtype: object\n",
+      "2    cover area with bandage\n",
+      "Name: Precaution_2, dtype: object\n",
+      "2    NaN\n",
+      "Name: Precaution_3, dtype: object\n",
+      "2    use ice to compress itching\n",
+      "Name: Precaution_4, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Precautions to take are:\")\n",
+    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_1\"]) \n",
+    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_2\"])\n",
+    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_3\"])\n",
+    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_4\"])\n"
    ]
   },
   {
