--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -362,28 +362,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Int64Index([2], dtype='int64')"
+       "\"An allergy is an immune system response to a foreign substance that's not typically harmful to your body.They can include certain foods, pollen, or pet dander. Your immune system's job is to keep you healthy by fighting harmful pathogens.\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "d = \"Allergy\"\n",
-    "df_2[df_2[\"Disease\"] == d][\"Description\"]"
+    "df_2[df_2[\"Disease\"] == d][\"Description\"].item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "4                   salt baths  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,13 +498,13 @@
     "df_3 = pd.read_csv(\"symptom_precaution.csv\")\n",
     "\n",
     "print(\"Precaution shape is:\", df_3.shape)\n",
-    "\n",
+    "#df_3.fillna()\n",
     "df_3.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -512,60 +512,89 @@
      "output_type": "stream",
      "text": [
       "Precautions to take are:\n",
-      "2    apply calamine\n",
-      "Name: Precaution_1, dtype: object\n",
-      "2    cover area with bandage\n",
-      "Name: Precaution_2, dtype: object\n",
-      "2    NaN\n",
-      "Name: Precaution_3, dtype: object\n",
-      "2    use ice to compress itching\n",
-      "Name: Precaution_4, dtype: object\n"
+      "apply calamine\n",
+      "cover area with bandage\n",
+      "nan\n",
+      "use ice to compress itching\n"
      ]
     }
    ],
    "source": [
     "print(\"Precautions to take are:\")\n",
-    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_1\"]) \n",
-    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_2\"])\n",
-    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_3\"])\n",
-    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_4\"])\n"
+    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_1\"].item()) \n",
+    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_2\"].item())\n",
+    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_3\"].item())\n",
+    "print(df_3[df_3[\"Disease\"] == d][\"Precaution_4\"].item())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#if df_2[\"Disease\"] == \"Malaria\":\n",
-    "    #print "
+    "\"\"\"A function that takes in a disease name , gives you a discription about the disease and precautions to take.\"\"\"\n",
+    "def drug_info(disease):\n",
+    "    d = disease\n",
+    "\n",
+    "    # Print disease description\n",
+    "    print(df_2[df_2[\"Disease\"] == d][\"Description\"].item())\n",
+    "\n",
+    "    # Print Precautions to take\n",
+    "    print(\"Precautions to take are:\")\n",
+    "    print(df_3[df_3[\"Disease\"] == d][\"Precaution_1\"].item()) \n",
+    "    print(df_3[df_3[\"Disease\"] == d][\"Precaution_2\"].item())\n",
+    "    print(df_3[df_3[\"Disease\"] == d][\"Precaution_3\"].item())\n",
+    "    print(df_3[df_3[\"Disease\"] == d][\"Precaution_4\"].item())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'A function that takes in a disease name , gives you a discription about the disease and precautions to take.'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An infectious disease caused by protozoan parasites from the Plasmodium family that can be transmitted by the bite of the Anopheles mosquito or by a contaminated needle or transfusion. Falciparum malaria is the most deadly type.\n",
+      "Precautions to take are:\n",
+      "Consult nearest hospital\n",
+      "avoid oily food\n",
+      "avoid non veg food\n",
+      "keep mosquitos out\n"
+     ]
     }
    ],
    "source": [
-    "\"\"\"A function that takes in a disease name , gives you a discription about the disease and precautions to take.\"\"\"\n",
-    "#def drug_info(disease):\n",
-    "    "
+    "drug_info(\"Malaria\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An allergy is an immune system response to a foreign substance that's not typically harmful to your body.They can include certain foods, pollen, or pet dander. Your immune system's job is to keep you healthy by fighting harmful pathogens.\n",
+      "Precautions to take are:\n",
+      "apply calamine\n",
+      "cover area with bandage\n",
+      "nan\n",
+      "use ice to compress itching\n"
+     ]
+    }
+   ],
+   "source": [
+    "drug_info(\"Allergy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +668,7 @@
        "4             shivering       5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,14 +718,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ThisPC\\AppData\\Local\\Temp\\ipykernel_16596\\2212837546.py:2: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "C:\\Users\\ThisPC\\AppData\\Local\\Temp\\ipykernel_8376\\2212837546.py:2: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  data_dict = df_4.set_index('Symptom').T.to_dict()\n"
      ]
     },
@@ -837,7 +866,7 @@
        " 'prognosis': {'weight': 5}}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +946,7 @@
        "4             shivering       5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1163,7 @@
        "4        NaN        NaN  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1242,7 @@
        "4             shivering       5"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1341,7 @@
        "0         NaN         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1454,7 @@
        "0         0.0         0.0         0.0         0.0         0.0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1460,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1666,7 @@
        "4         0.0         0.0         0.0         0.0         0.0         0.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1899,7 +1928,7 @@
        "max       5.000000     2.000000  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1910,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2308,7 +2337,7 @@
        "[4920 rows x 17 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2326,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2347,7 +2376,7 @@
        "StandardScaler()"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2358,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2396,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2406,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2470,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2527,25 +2556,156 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Create Model that predicts disease and returns information about the disease"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Symptom_1</th>\n",
+       "      <th>Symptom_02</th>\n",
+       "      <th>Symptom_03</th>\n",
+       "      <th>Symptom_04</th>\n",
+       "      <th>Symptom_05</th>\n",
+       "      <th>Symptom_06</th>\n",
+       "      <th>Symptom_07</th>\n",
+       "      <th>Symptom_08</th>\n",
+       "      <th>Symptom_09</th>\n",
+       "      <th>Symptom_10</th>\n",
+       "      <th>Symptom_11</th>\n",
+       "      <th>Symptom_12</th>\n",
+       "      <th>Symptom_13</th>\n",
+       "      <th>Symptom_14</th>\n",
+       "      <th>Symptom_15</th>\n",
+       "      <th>Symptom_16</th>\n",
+       "      <th>Symptom_17</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Symptom_1  Symptom_02  Symptom_03  Symptom_04  Symptom_05  Symptom_06  \\\n",
+       "0          5         0.0         0.0         0.0         0.0         0.0   \n",
+       "\n",
+       "   Symptom_07  Symptom_08  Symptom_09  Symptom_10  Symptom_11  Symptom_12  \\\n",
+       "0         0.0         0.0         0.0         0.0         0.0         0.0   \n",
+       "\n",
+       "   Symptom_13  Symptom_14  Symptom_15  Symptom_16  Symptom_17  \n",
+       "0         0.0         0.0         0.0         0.0         0.0  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Test_01"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ThisPC\\AppData\\Roaming\\Python\\Python310\\site-packages\\sklearn\\base.py:493: FutureWarning: The feature names should match those that were passed during fit. Starting version 1.2, an error will be raised.\n",
+      "Feature names unseen at fit time:\n",
+      "- Symptom_02\n",
+      "- Symptom_03\n",
+      "- Symptom_04\n",
+      "- Symptom_05\n",
+      "- Symptom_06\n",
+      "- ...\n",
+      "Feature names seen at fit time, yet now missing:\n",
+      "- Symptom_2\n",
+      "- Symptom_3\n",
+      "- Symptom_4\n",
+      "- Symptom_5\n",
+      "- Symptom_6\n",
+      "- ...\n",
+      "\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "standardized_test = scaler.transform(Test_01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acne vulgaris is the formation of comedones, papules, pustules, nodules, and/or cysts as a result of obstruction and inflammation of pilosebaceous units (hair follicles and their accompanying sebaceous gland). Acne develops on the face and upper trunk. It most often affects adolescents.\n",
+      "Precautions to take are:\n",
+      "bath twice\n",
+      "avoid fatty spicy food\n",
+      "drink plenty of water\n",
+      "avoid too many products\n"
+     ]
+    }
+   ],
+   "source": [
+    "drug_info(rfc_classifier.predict(standardized_test).item())"
+   ]
   },
   {
    "cell_type": "code",
